--- a/acvm-repo/acir_field/Cargo.toml
+++ b/acvm-repo/acir_field/Cargo.toml
@@ -29,6 +29,7 @@ ark-ff = { version = "^0.4.0", optional = true, default-features = false }
 cfg-if = "1.0.0"
 
 [features]
-default = ["bn254"]
+default = ["Goldilocks"]
 bn254 = ["dep:ark-bn254", "dep:ark-ff"]
 bls12_381 = ["dep:ark-bls12-381", "dep:ark-ff"]
+Goldilocks = []
