New option Goldilocks. Some things in the Barretenberg backend are commented because they were coupled and they didn't pass the typecheck when the Field changed to Goldilocks.

--- a/acvm-repo/acir/Cargo.toml
+++ b/acvm-repo/acir/Cargo.toml
@@ -33,7 +33,8 @@ criterion.workspace = true
 pprof.workspace = true
 
 [features]
-default = ["bn254"]
+default = ["goldilocks"]
+goldilocks = ["acir_field/goldilocks", "brillig/goldilocks"]
 bn254 = ["acir_field/bn254", "brillig/bn254"]
 bls12_381 = ["acir_field/bls12_381", "brillig/bls12_381"]
 
