--- a/acvm-repo/bn254_blackbox_solver/Cargo.toml
+++ b/acvm-repo/bn254_blackbox_solver/Cargo.toml
@@ -52,5 +52,6 @@ name = "criterion"
 harness = false
 
 [features]
-default = ["bn254"]
+default = ["goldilocks"]
+goldilocks = ["acir/goldilocks"]
 bn254 = ["acir/bn254"]
