--- a/acvm-repo/acvm/Cargo.toml
+++ b/acvm-repo/acvm/Cargo.toml
@@ -24,7 +24,12 @@ acvm_blackbox_solver.workspace = true
 indexmap = "1.7.0"
 
 [features]
-default = ["bn254"]
+default = ["goldilocks"]
+goldilocks = [
+    "acir/goldilocks",
+    "brillig_vm/goldilocks",
+    "acvm_blackbox_solver/goldilocks",
+]
 bn254 = [
     "acir/bn254",
     "brillig_vm/bn254",
