--- a/acvm-repo/blackbox_solver/Cargo.toml
+++ b/acvm-repo/blackbox_solver/Cargo.toml
@@ -39,6 +39,7 @@ p256 = { version = "0.11.0", features = [
 
 
 [features]
-default = ["bn254"]
+default = ["goldilocks"]
+goldilocks = ["acir/goldilocks"]
 bn254 = ["acir/bn254"]
 bls12_381 = ["acir/bls12_381"]
