--- a/acvm-repo/brillig/Cargo.toml
+++ b/acvm-repo/brillig/Cargo.toml
@@ -17,6 +17,7 @@ acir_field.workspace = true
 serde.workspace = true
 
 [features]
-default = ["bn254"]
+default = ["goldilocks"]
+goldilocks = ["acir_field/goldilocks"]
 bn254 = ["acir_field/bn254"]
 bls12_381 = ["acir_field/bls12_381"]
