--- a/acvm-repo/brillig_vm/Cargo.toml
+++ b/acvm-repo/brillig_vm/Cargo.toml
@@ -20,6 +20,7 @@ num-traits.workspace = true
 thiserror.workspace = true
 
 [features]
-default = ["bn254"]
+default = ["goldilocks"]
+goldilocks = ["acir/goldilocks"]
 bn254 = ["acir/bn254"]
 bls12_381 = ["acir/bls12_381"]
